Add endpoint smoke tests and introduce local/prod Spring profiles